deploy/provisioning-engine/service-kernel.yaml
apiVersion: v1
kind: Service
metadata:
  name: kernel-provisioning
  namespace: provisioning
spec:
  selector:
    app: kernel-provisioning
  ports:
  - name: http
    port: 80
    targetPort: 80
    protocol: TCP
