deploy/provisioning-engine/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: provisioning
  namespace: provisioning
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    external-dns.alpha.kubernetes.io/hostname: boot.hermes.ranabo.com
    external-dns.alpha.kubernetes.io/target: hermes.ranabo.com
spec:
  ingressClassName: nginx
  rules:
  - host: boot.hermes.ranabo.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kernel-provisioning
            port:
              number: 80
  tls:
    - hosts:
        - boot.hermes.ranabo.com
      secretName: hermes-wildcard-tls
